syntax = "proto3";

option go_package = "/proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  string token = 2;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}


